--- a/templates/js-none/package.json
+++ b/templates/js-none/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Express backend with in-memory storage",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
