--- a/templates/ts-postgresql/package.json
+++ b/templates/ts-postgresql/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "Express backend with PostgreSQL (TypeScript)",
   "main": "dist/server.js",
+  "type": "module",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
   },
@@ -15,7 +17,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^7.2.0",
+    "@prisma/pg-adapter": "^7.2.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -23,6 +26,7 @@
     "express-rate-limit": "^7.1.5",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.0",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1"
   },
@@ -32,7 +36,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
-    "prisma": "^5.7.1",
+    "@types/pg": "^8.11.6",
+    "prisma": "^7.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
